src/style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*,
*::before,
*::after {
	box-sizing: border-box;
}

* {
	margin: 0;
}

body {
	line-height: 1.5;
	-webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

input,
button,
textarea,
select {
	font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

p {
	text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

.text-l1 {
	font-size: 4rem;
}

.text-l2 {
	font-size: 3.5rem;
}

.text-l3 {
	font-size: 3rem;
}

.text-l4 {
	font-size: 2.5rem;
}

.text-l5 {
	font-size: 2.35rem;
}

.text-l6 {
	font-size: 2rem;
}

.text-1 {
	font-size: 2.2rem;
}

.text-2a {
	font-size: 1.8rem;
}

.text-2b {
	font-size: 1.5rem;
}

.text-3 {
	font-size: 1.3rem;
}

.text-3a {
	font-size: 1.2rem;
}

.text-4 {
	font-size: 1.1rem;
}

.text-5 {
	font-size: 1.05rem;
}

.text-6 {
	font-size: 0.95rem;
}

.text-7 {
	font-size: 0.9rem;
}

.text-8 {
	font-size: 0.85rem;
}

.text-9 {
	font-size: 0.8rem;
}

.bold-1 {
	font-weight: 700;
}

.bold-2 {
	font-weight: 600;
}

.bold-3 {
	font-weight: 500;
}

#root,
#__next {
	isolation: isolate;
}
/*reset ends*/

/*@media only screen and (min-width: 768px) {
  html {
    font-size: 12px;
  }
}*/

:root {
	font-family: Ubuntu, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

body {
	background-color: #8edbe5;

	width: 100vw;
	height: 100vh;
max-width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.input-section {
	display: flex;
	gap: calc(10/16)rem;
}

input {
	background-color: #51d0e0;
	border-radius: 0.5rem;
	border: none;
	border: 1px solid #2091a0;
}

#search-btn {
	border-radius: 0.5rem;
	background-color: #51d0e0;
}
select {
	background-color: #51d0e0;
	border-radius: 0.5rem;
}

header {
	width: 90%;
	height: 3rem;
	display: flex;
	align-items: flex-end;
	justify-content: flex-end;
}

main {
	margin: 0;
	display: flex;
	align-items: center;
	height: 100%;
	width: 100%;
max-width: 100%;
}

button {
	background-color: #8edbe5;
	border: none;
	border: 1px solid #2091a0;
}

button:active,
button:focus,
.active {
	background-color: #b6e3e9;
}

#hourly-btn,
#tomorrow-btn {
	border-radius: 0.5rem 0 0 0.5rem;
}

#weekly-btn,
#precip-btn {
	border-radius: 0 0.5rem 0.5rem 0;
}

.borders {
	border: 1px solid black;
	border-radius: 1rem;
}
.parent {
	height: 90%;
	width: 100%;
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	grid-template-rows: 2fr repeat(10, 1fr);
	grid-column-gap: 5px;
	grid-row-gap: 5px;
}

.rectangle-top {
	display: flex;
	height: 50%;
	width: 100%;
	border-collapse: collapse;
	justify-content: flex-end;
}

.rectangle-bottom {
	display: flex;
	overflow-x: scroll;
	height: 50%;
	width: 100%;
	gap: 5px;
}

.rectangle-left {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: 40%;
}

.rectangle-right {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	height: 100%;
	width: 60%;
}

.hourlyWeatherBtns {
	margin-top: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
	height: 25%;
}
.daymax {
	margin-left: 10px;
	height: 75%;
	display: flex;

	flex-direction: column;
}

.square {
	background-color: #51d0e0;
	display: flex;
	justify-content: flex-end;
	border-collapse: collapse;
	flex-wrap: wrap;
	border-radius: 1rem;
}
.square-left {
	height: 100%;
	width: calc(100% / 3 * 2);
	border-collapse: collapse;
	flex-wrap: wrap;
}

.square-left-inner {
	border-collapse: collapse;
	margin-left: 10px;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.square-right {
	display: flex;
	height: 100%;
	width: calc(100% / 3);
	border-collapse: collapse;
}

.square-unit {
	margin-left: 5px;
}

.weather-icon {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100%;
	max-height: 180px;
	width: 20%;
}

.current-data {
	height: 100%;
	width: auto;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}
.current-conditions {
	margin-left: 20px;
	width: 100%;
}
.current-temps {
	height: auto;
	padding: 0;
	display: flex;
	gap: 30px;

	margin-left: 20px;
}

.current-temp {
	height: 80%;
}

#temp,
#feelslike {
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
}

.alerts {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 60%;
}

.current-location {
	display: flex;
	flex-direction: column;
	justify-content: center;

	text-align: right;
}

.buttons-right {
	margin-top: 5px;
	margin-bottom: 5px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.forecast {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
	width: 100%;
	height: 95%;
	overflow-y: scroll;
}

.forecast-card {
	background-color: #8edbe5;
	border: 1px solid black;
	border-radius: 1rem;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: nowrap;
	width: 95%;
	height: 10%;
}

.forecast-card-title,
.forecast-card-icon,
.forecast-card-temp {
	display: flex;
	align-items: center;
}

.forecast-card-title,
.forecast-card-temp {
	height: 100%;
}

.forecast-card-icon {
	height: 80%;
}

.weekly-card {
	background-color: #8edbe5;
	border: 1px solid black;
	border-radius: 1rem;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: nowrap;
	width: 95%;
	height: 10%;
}

.weekly-card-title,
.weekly-card-icon,
.weekly-card-temps {
	display: flex;
	justify-content: center;
	align-items: center;
}

.weekly-card-title,
.weekly-card-temps {
	height: 100%;
}

.weekly-card-icon {
	height: 80%;
}

.weekly-card-temps {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.card {
	background-color: #8edbe5;
	height: 100%;
	padding-left: 10px;
	padding-right: 10px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-around;
}

.tempdata,
.winddata,
.precipdata {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-around;
}

.tempdata,
.precipdata {
	gap: 20px;
}

.winddata {
	gap: 10px;
}

.div1 {
	background-color: #8edbe5;
	grid-area: 1 / 1 / 2 / 7;
	display: flex;
	justify-content: space-between;
	align-items: center;
	border-radius: 1rem;
	max-height: 180px;
}
.div2 {
	background-color: #51d0e0;
	border-radius: 1rem;
	grid-area: 2 / 1 / 6 / 5;
	display: flex;
	flex-wrap: wrap;
	border-collapse: collapse;
}
.div3 {
	border-radius: 1rem;
	background-color: #51d0e0;
	grid-area: 2 / 5 / 12 / 7;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.div4 {
	grid-area: 6 / 1 / 9 / 2;
}
.div5 {
	grid-area: 6 / 2 / 9 / 3;
}
.div6 {
	grid-area: 6 / 3 / 9 / 4;
}
.div7 {
	grid-area: 6 / 4 / 9 / 5;
}
.div8 {
	grid-area: 9 / 1 / 12 / 2;
}
.div9 {
	grid-area: 9 / 2 / 12 / 3;
}
.div10 {
	grid-area: 9 / 3 / 12 / 4;
}
.div11 {
	grid-area: 9 / 4 / 12 / 5;
}


.hidden {
	display: none;
}

.current-temp-1 {
	display: flex;
}
.maxValue {
	display: flex;
	align-items: baseline;
	gap: 10px;
}

a {
	font-weight: 800;
}
.square-heading {
	font-size: 18px;
	font-weight: 600;
}

